--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 name: 🚀Release
-run-name: 🚀${{ inputs.release_type }} Release ${{ inputs.dry-run == true && '(Dry Run)' || '' }}
+run-name: 🚀${{ inputs.release-type }} Release ${{ inputs.dry-run == true && '(Dry Run)' || '' }}
 
 
 defaults:
@@ -10,7 +10,7 @@ defaults:
 on:
   workflow_dispatch:
     inputs:
-      release_type:
+      release-type:
         description: The type of release to validate.  Either 'Preview' or 'Production'.
         required: true
         type: choice
@@ -29,17 +29,36 @@ on:
 
 
 jobs:
+  determine_release_notes_path:
+    name: Determine Release Notes Dir Path
+    runs-on: ubuntu-latest
+    outputs:
+      release-notes-dir-path: ${{ steps.get-dir-path.outputs.release-notes-dir-path }}
+    steps:
+      - name: Print Environment Variables
+        run: Get-ChildItem -Path Env:* | Sort-Object Name
+
+      - name: Get Dir Path
+        id: get-dir-path
+        run: |
+          $dirPath = "${{ inputs.release-type }}" -eq "Production" ? "${{ vars.PROD_RELATIVE_RELEASE_NOTES_DIR_PATH }}" : "${{ vars.PREV_RELATIVE_RELEASE_NOTES_DIR_PATH }}";
+          "release-notes-dir-path=$dirPath" >> $env:GITHUB_OUTPUT;
+
+
   perform_release:
-    name: Performing ${{ inputs.release_type }} Release of ${{ vars.PROJECT_NAME }} (${{ inputs.release_type == 'Production' && 'Release' || 'Debug' }})
-    uses: KinsonDigital/Infrastructure/.github/workflows/dotnet-action-release.yml@v10.0.1
+    name: Performing ${{ inputs.release-type }} Release of ${{ vars.PROJECT_NAME }} (${{ inputs.release-type == 'Production' && 'Release' || 'Debug' }})
+    needs: determine_release_notes_path
+    uses: KinsonDigital/Infrastructure/.github/workflows/dotnet-action-release.yml@v11.0.0
     with:
       project-name: "${{ vars.PROJECT_NAME }}"
-      release-type: "${{ inputs.release_type }}"
+      release-type: "${{ inputs.release-type }}"
       run-branch: "${{ github.ref_name }}"
       net-sdk-version: "${{ vars.NET_SDK_VERSION }}"
-      relative-release-notes-dir-path: "${{ vars.SCRIPT_RELATIVE_DIR_PATH }}"
+      relative-release-notes-dir-path: "${{ needs.determine_release_notes_path.outputs.release-notes-dir-path }}"
       release-notes-file-name-prefix: "${{ vars.RELEASE_NOTES_FILE_NAME_PREFIX }}"
-      build-config: "${{ inputs.release_type == 'Production' && 'Release' || 'Debug' }}"
+      build-config: "${{ inputs.release-type == 'Production' && 'Release' || 'Debug' }}"
       pr-include-notes-label: "${{ vars.PR_INCLUDE_NOTES_LABEL }}"
       runs-on: ${{ inputs.runs-on }}
       dry-run: ${{ inputs.dry-run }}
+    secrets:
+      cicd-pat: ${{ secrets.CICD_TOKEN }}
