--- a/.github/workflows/add-new-issue-to-project.yml
+++ b/.github/workflows/add-new-issue-to-project.yml
@@ -4,7 +4,7 @@ name: 🤖Add New Issue To Project
 on:
   issues:
     types: opened
-  pull_request:
+  pull_request_target:
     types: opened
     branches: [main, preview]
 
@@ -12,7 +12,7 @@ on:
 jobs:
   add_new_issue_to_project:
     name: Add New Issue
-    uses: KinsonDigital/Infrastructure/.github/workflows/add-issue-to-project.yml@v11.0.0
+    uses: KinsonDigital/Infrastructure/.github/workflows/add-issue-to-project.yml@v13.0.0
     with:
       org-name: "${{ vars.ORGANIZATION_NAME }}"
       org-project-name: "${{ vars.ORG_PROJECT_NAME }}"
