--- a/.github/workflows/build-status-check.yml
+++ b/.github/workflows/build-status-check.yml
@@ -3,14 +3,14 @@ run-name: ✅Build Status Check (${{ github.base_ref }} branch)
 
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [main, preview]
 
 
 jobs:
   build_project:
     name: ${{ vars.PROJECT_NAME }} Build Status Check
-    uses: KinsonDigital/Infrastructure/.github/workflows/build-csharp-project.yml@v11.0.0
+    uses: KinsonDigital/Infrastructure/.github/workflows/build-csharp-project.yml@v13.0.0
     with:
       project-name: ${{ vars.PROJECT_NAME }}
       build-config: Debug
