--- a/.github/workflows/unit-test-status-check.yml
+++ b/.github/workflows/unit-test-status-check.yml
@@ -3,14 +3,14 @@ run-name: ✅Unit Testing Status Check (${{ github.base_ref }} branch)
 
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [main, preview]
 
 
 jobs:
   run_tests:
     name: ${{ vars.PROJECT_NAME }} Test Status Check
-    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v11.0.0
+    uses: KinsonDigital/Infrastructure/.github/workflows/run-csharp-tests.yml@v13.0.0
     with:
       project-name: ${{ vars.PROJECT_NAME }}Tests
       build-config: Debug
